# rustique

./: .gitignore  Cargo.toml  README.md  Untitled1.ipynb  benchmark_tests.ipynb  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Untitled1-checkpoint.ipynb  benchmark_tests-checkpoint.ipynb
rustique/: main.py  rustique.pyi  speed.py  vector.py  wtf.py
rustique/tests/: test_list.py
src/: context_manager.rs  dict.rs  engine.rs  engine2.rs  float.rs  int.rs  lib.rs  list.rs  memory.rs  optimized_memory.rs  rust_types.rs  rust_types_advanced.rs  rustique_wrapper.rs  sequence.rs  str.rs  tuple.rs
src/collections/: collections.rs  dict.rs  dict_backup.rs  faster.rs  list.rs  mod.rs  pydict.rs
