[package]
name = "rustique"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustique"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module", "py-clone", "num-bigint", "num-complex"] }
indexmap = "2.7.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
num-complex = "0.4.6"
rug = { version = "1.27", features = ["integer"] }

[build]
rustflags = ["--cfg", "PYO3_DISABLE_REFERENCE_POOL"]