[package]
name = "rustique"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustique"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module", "py-clone", "num-bigint", "num-complex"] }
indexmap = "2.7.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
num-complex = "0.4.6"
rug = { version = "1.27", features = ["integer"] }
rustc-hash = "2.1.0"
once_cell = "1.20.2"
caseless = "0.2.2"
unic-ucd = "0.9.0"
unicode-segmentation = "1.12.0"
unicode-general-category = "1.0.0"

[build]
rustflags = ["--cfg", "PYO3_DISABLE_REFERENCE_POOL"]